--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  background-color: #fafafa;
 }
 
+body {
+  background-color: #fafafa;
+}
 button {
   cursor: pointer;
 }
@@ -14,26 +15,22 @@ button {
   height: 4rem;
   display: flex;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 5%;
   justify-content: space-between;
-  margin-left: 2.5%;
 }
 
 .navItems {
-  background-color: white;
   display: flex;
   gap: 3rem;
 }
 
 .navItems h2 {
-  background-color: white;
   font-size: 2rem;
   font-weight: bold;
   color: #0290ff;
 }
 
 .navLinks {
-  background-color: white;
   display: flex;
   gap: 2rem;
   align-items: center;
@@ -44,7 +41,6 @@ button {
 }
 
 .navLinks li a {
-  background-color: white;
   text-decoration: none;
 }
 
@@ -67,9 +63,11 @@ button {
 
 .bookContainer {
   display: flex;
+  background-color: #fff;
   justify-content: space-between;
   padding: 4rem;
-  border: 1px solid black;
+  border: 1px solid #e8e8e8;
+  border-radius: 4px;
   gap: 1rem;
   align-items: center;
 }
@@ -79,7 +77,7 @@ button {
   flex-direction: column;
   height: 7rem;
   gap: 0.25rem;
-  width: 20rem;
+  width: 25%;
 }
 
 .category_display {
@@ -91,6 +89,10 @@ button {
   font-weight: bold;
 }
 
+.author_display {
+  color: #4386bf;
+}
+
 .buttonsList {
   display: flex;
   gap: 1rem;
@@ -99,6 +101,28 @@ button {
 
 .buttonsList li {
   list-style: none;
+}
+
+.buttonsList li button{
+  background-color: #fff;
+  color: #4386bf;
+}
+
+.complete {
+  width: 5rem;
+  height: 1.125rem;
+  opacity: 0.5;
+  font-size: 0.875rem;
+  color: #121212;
+}
+
+.percentComplete {
+  margin-top: 7.5px;
+  width: 2.938rem;
+  height: 2.438rem;
+  font-size: 2rem;
+  color: #121212;
+
 }
 
 .addBookForm select {
@@ -117,16 +141,19 @@ button {
   display: flex;
   gap: 0.5rem;
   width: 15rem;
-  border-right: 2px solid rgb(209, 208, 208);
+  border-right: 1px solid rgb(224, 224, 224);
   padding-right: 60px;
 }
 
 .progress-bar {
-  width: 175px;
-  height: 75px;
+  width: 4.25rem;
+  height: 4.25rem;
+  border-style: solid;
+  border-width: 5px;
+  border-image-source: linear-gradient(to bottom, var(--medium-blue), #379cf6);
+  border-image-slice: 1;
   border-radius: 50%;
-  position: relative;
-  background-color: #eee;
+  color: #307bbe;
 }
 
 .bookChapter {
@@ -134,6 +161,7 @@ button {
   flex-direction: column;
   gap: 0.5rem;
   width: 20rem;
+  margin-left: 3rem;
 }
 
 .currentChapter_display {
@@ -152,20 +180,23 @@ button {
   height: 2.063rem;
   padding: 0.438rem 1.188rem 0.5rem 1.375rem;
   border-radius: 3px;
+  background-color: #0290ff;
+  color: #fff;
+  font-weight: 300;
+  border: none;
 }
 
 .addBook {
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  margin-top: 1rem;
+  margin: 2.5% 5%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0 2rem;
+  padding: 2rem 0;
   margin-bottom: 100px;
+  border-top: solid 1px black;
 }
 
-.addBook h3 {
+.addBook h2 {
   color: #888;
 }
 
@@ -175,6 +206,22 @@ button {
 }
 
 .addBookForm input {
-  width: 60%;
+  border: solid 1px #e8e8e8;
+  border-radius: 4px;
   padding: 0.6rem;
+}
+
+.title_input {
+  width: 50%;
+}
+
+.author_input {
+  width: 30%;
+}
+
+.addBookBtn {
+  border: none;
+  width: 20%;
+  background-color: #0290ff;
+  color: white;
 }
